# api_s3_pipeline

./: .gitignore  README.md  main.py  pyproject.toml  test_setup.py
config/: config.yaml  config_loader.py
docs/: architecture.drawio  documentation.md
src/: ingest.py  scheduler.py  storage.py  transform.py
